<resources>
    <string name="app_name">Reversi Android</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_game">Reversi</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="drawer_item_about">About</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_multiplayer">Launch Online</string>
    <string name="drawer_item_singleplayer">Launch Local</string>
    <string name="drawer_item_play">Play</string>
    <string name="app_author">Glory to the Red Team.</string>
    <string name="app_info">App Info</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification_game_in_progress">Reversi - Game in Progress</string>
    <string name="notification_save_end_game">Save and Exit Game</string>
    <string name="label_choose_game_mode">Select a game mode:</string>
    <string name="button_sp_with_easy_ai">Singleplayer with Easy AI</string>
    <string name="button_sp_with_medium_ai">Singleplayer with Medium AI</string>
    <string name="button_sp_with_hard_ai">Singleplayer with Challenging</string>
    <string name="button_something_else">Something Else</string>
    <string name="button_camera_mode">Switch Camera Mode</string>
    <string name="button_confirm_move">Confirm Move</string>
    <string name="title_game_service_crashed">Oh no! The game crashed.</string>
    <string name="msg_game_service_crashed">It seems that the game has crashed. Your progress is autosaved, however. If you would like to submit a bug report, please click below.</string>
    <string name="drawer_item_saves">Saves/Replays</string>
    <string name="label_sp_against_ai">Play Against Bot</string>
    <string name="button_sp_difficulty_easy">Easy</string>
    <string name="button_sp_difficulty_medium">Medium</string>
    <string name="button_sp_difficulty_hard">Hard</string>
    <string name="dialog_replace_title">Replace Current Game?</string>
    <string name="dialog_replace_message">The game is automatically saved.</string>
    <string name="menu_show_possible_moves">Toggle Possible Moves</string>
    <string name="menu_show_best_move">Toggle Best Move</string>
    <string name="label_sp_against_ai_first">Play Against Bot (Bot Plays First)</string>
    <string name="label_sp_against_ai_second">Play Against Bot (Bot Plays Last)</string>
    <string name="label_ai_against_ai">Bot Against Bot</string>
    <string name="button_ai_easy_easy">Easy vs. Easy</string>
    <string name="button_ai_easy_medium">Easy vs. Medium</string>
    <string name="button_ai_easy_hard">Easy vs. Hard</string>
    <string name="button_ai_medium_easy">Medium vs. Easy</string>
    <string name="button_ai_medium_medium">Medium vs. Medium</string>
    <string name="button_ai_medium_hard">Medium vs. Hard</string>
    <string name="button_ai_hard_easy">Hard vs. Easy</string>
    <string name="button_ai_hard_medium">Hard vs. Medium</string>
    <string name="button_ai_hard_hard">Hard vs. Hard</string>
    <string name="about_support_by">Built by the PLU Red Team:</string>
    <string name="author_daniel">Daniel Beal</string>
    <string name="author_matthew">Matthew Conover</string>
    <string name="author_jessica">Jessica Chase</string>
    <string name="author_james">James DeBroeck</string>
    <string name="author_andrew">Andrew Gjerness</string>
    <string name="about_icons8">Thanks to Icons8 for making awesome icons.</string>
    <string name="unimplemented">Multiplayer support is not ready yet!</string>
    <string name="pref_p1_color">Player 1 Color (future games)</string>
    <string name="pref_p1_color_title">Select a color:</string>
    <string name="pref_p2_color">Player 2 Color (future games)</string>
    <string name="play_to_end">Play to Last</string>
    <string name="play_next">Next</string>
    <string name="play_previous">Prev</string>
    <string name="menu_open_move_history">Open Move History</string>
    <string name="button_sp_human_vs_human">Human vs. Human</string>
    <string name="send">Send</string>
    <string name="title_activity_login">Log In to Reversi Online</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login or register</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_successful">Login Successful</string>
    <string name="login_trying">Trying Login...</string>
    <string name="dialog_join_game_title">Join Network Game</string>
    <string name="dialog_join_game_message">Are you sure you want to join this game?</string>
    <string name="dialog_wait_start">Waiting for game to start...</string>
    <string name="error_join_game">Failed to join game!</string>
    <string name="menu_create_net_game">Create Network Game</string>
    <string name="dialog_new_net_title">Start Network Game</string>
    <string name="dialog_new_net_message">Please type a name for your new game:</string>
    <string name="dialog_new_net_progress">Waiting for opponent...</string>
    <string name="error_create_net_error">There was an error creating the network game. Please try again later</string>
    <string name="dialog_create_game">Create</string>
</resources>
