<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_play"
            android:icon="@drawable/ic_play"
            android:title="@string/drawer_item_play" />
        <item
            android:id="@+id/nav_singleplayer"
            android:icon="@drawable/ic_singleplayer"
            android:title="@string/drawer_item_singleplayer" />
        <item
            android:id="@+id/nav_multiplayer"
            android:icon="@drawable/ic_network"
            android:title="@string/drawer_item_multiplayer" />

        <item
            android:id="@+id/nav_saves"
            android:icon="@drawable/ic_save"
            android:title="@string/drawer_item_saves" />

    </group>

    <item android:title="@string/app_info">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/drawer_item_settings" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info"
                android:title="@string/drawer_item_about" />
        </menu>
    </item>

</menu>
